--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -55,14 +55,28 @@ nav a {
 
 .introduction h1 {
     margin: 0;
-    font-size: 3rem;
+    font-size: 2.5rem;
 }
 
 #job-title {
-    font-size: 4rem;
+    font-size: 3.5rem;
     z-index: 2;
     color: orange;
 }
+
+/* @media only screen and (max-width: 800px) {
+    .introduction {
+        flex-shrink: 1;
+    }
+
+    .introduction h1 {
+        font-size: 1rem;
+    }
+    
+    #job-title {
+        font-size: 2rem;
+    }
+} */
 
 .linkedin_github {
     display: flex;
